modification max.css
ajout class test

--- a/web/css/max.css
+++ b/web/css/max.css
@@ -4,3 +4,5 @@ pa-no-h {padding-left: 0px !important; padding-right:0px !important;}
 pa-no-v {padding-top: 0px !important; padding-bottom: 0px !important;}
 
 .wrapper {width:100%}
+
+.test{color:white;}
