--- a/web/css/max.css
+++ b/web/css/max.css
@@ -2,3 +2,7 @@ ma-no-h {margin-left: 0px !important; margin-right:0px !important;}
 ma-no-v {margin-top: 0px !important; margin-bottom: 0px !important;}
 pa-no-h {padding-left: 0px !important; padding-right:0px !important;}
 pa-no-v {padding-top: 0px !important; padding-bottom: 0px !important;}
+
+#menu_1 form{ background-color: #47D147;}
+
+#menu_1 input[type=text] {color: #888;}
