--- a/web/css/max.css
+++ b/web/css/max.css
@@ -6,3 +6,9 @@ pa-no-v {padding-top: 0px !important; padding-bottom: 0px !important;}
 #menu_1 input[type=text] {color: #888;}
 
 .presentation_pseudo{ color: #fff;}
+
+#menu_connected {width:100%;}
+#menu_connected li {display: inline; margin:0% 3%;}
+#menu_connected li a {font-size: 4em;}
+#menu_connected ul {text-align: center;}
+#menu_connected .active a{font-size: 6em; text-decoration: underline;}
