--- a/web/css/max.css
+++ b/web/css/max.css
@@ -1,7 +1,7 @@
-ma-no-h {margin-left: 0px !important; margin-right:0px !important;}
-ma-no-v {margin-top: 0px !important; margin-bottom: 0px !important;}
-pa-no-h {padding-left: 0px !important; padding-right:0px !important;}
-pa-no-v {padding-top: 0px !important; padding-bottom: 0px !important;}
+.ma-no-h {margin-left: 0px !important; margin-right:0px !important;}
+.ma-no-v {margin-top: 0px !important; margin-bottom: 0px !important;}
+.pa-no-h {padding-left: 0px !important; padding-right:0px !important;}
+.pa-no-v {padding-top: 0px !important; padding-bottom: 0px !important;}
 
 #menu_1 input[type=text] {color: #888;}
 
@@ -12,3 +12,5 @@ pa-no-v {padding-top: 0px !important; padding-bottom: 0px !important;}
 #menu_connected li a {font-size: 4em;}
 #menu_connected ul {text-align: center;}
 #menu_connected .active a{font-size: 6em; text-decoration: underline;}
+
+#menu_addliste_box input {display:block;}
