--- a/web/css/nico.css
+++ b/web/css/nico.css
@@ -52,14 +52,20 @@ footer {
 }
 .ban2a {
     display: inline-block;
-    width: 20%;
+    _width: 20%;
 }
 .ban2b {
     display: inline-block;
     min-width: 300px;
     padding: auto;
+    text-align: center;
+    margin-left: 20%;
 }
-
+@media screen and (max-width: 400px) {
+  .ban2b {
+    margin-left: 5%;
+  }
+}
 .clean {
     clear: both;
 }
@@ -143,10 +149,44 @@ button:hover {
     background-color: #0a0;
 }
 
+#principal {
+    text-align: center;
+}
+#principal h3 { color:#084;}
 div[id^=block_] {
-    float:left;
     border: 5px solid white;
     border-radius: 15px;
     padding: 5px 10px;
     margin: 10px;
+    text-align: left;
+}
+#block_info {
+    display: inline-block;
+    overflow: auto;
+    min-width: 250px;
+    max-width: 600px;
+    padding: 5px;
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-top:10px;
+}
+
+#block_actu {
+    display: inline-block;
+    overflow: auto;
+    width: 280px;
+    min-width: 200px;
+    height: 200px;
+    padding: 1px;
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-top:10px;
+}
+
+#principal li {
+    list-style-type: circle;
+    margin: 0 0 0 25px;
+}
+#principal ul {
+    margin: 5px 0 5px 0;
 }
