--- a/web/css/nico.css
+++ b/web/css/nico.css
@@ -1,6 +1,6 @@
 body {
     background-image: url("../images/fond.png");
-    background-size: 60%;
+    background-size: 600px auto;
     font-size: 14px;
     font-family: "Comic Sans MS";
     margin: 0;
@@ -46,24 +46,25 @@ footer {
 .ban1 {
     display: inline-block;
     width: 20%;
-    min-width: 220px;
+    min-width: 280px;
     text-align: center; 
-    padding: auto;
+    padding: 2px 0 2px 0;
 }
-.ban2a {
+.ban2 {
     display: inline-block;
-    _width: 20%;
-}
-.ban2b {
-    display: inline-block;
-    min-width: 300px;
-    padding: auto;
+    /*min-width: 300px;*/
     text-align: center;
-    margin-left: 20%;
+    margin-left: 18%;
+    padding: 0;
 }
 @media screen and (max-width: 400px) {
-  .ban2b {
-    margin-left: 5%;
+  .ban2 {
+    margin: 0;
+  }
+}
+@media screen and (min-width: 401px) and (max-width: 640px) {
+  .ban2 {
+    margin: 0;
   }
 }
 .clean {
@@ -197,4 +198,16 @@ div[id^=block_] {
 }
 #principal ul {
     margin: 5px 0 5px 0;
+}
+
+#nous {
+    text-align: center;
+}
+
+#nous h3 {
+    font-size: 24px;
+    color:#084;
+    text-decoration: underline;
+    font-weight: bold;
+    text-shadow: -1px 0 2px white, 0 1px 2px white, 1px 0 2px white, 0 -1px 2px white;
 }
