--- a/web/css/max.css
+++ b/web/css/max.css
@@ -9,7 +9,7 @@
 
 #menu_connected {width:100%;vertical-align: top;}
 #menu_connected li {display: inline; margin:0% 3%;}
-#menu_connected li a {font-size: 1.7em;}
+#menu_connected li a {font-size: 1.7em; text-shadow: -1px 0 2px #848484, 0 1px 2px #848484, 1px 0 2px #848484, 0 -1px 2px #848484;}
 #menu_connected ul {text-align: center;}
 #menu_connected .active a{font-size: 3em; text-decoration: underline;}
 
