--- a/web/css/nico.css
+++ b/web/css/nico.css
@@ -133,6 +133,10 @@ ul {
     margin: 5px 0 0 0;
 }
 
+.magasin .menu_box{
+    max-width: 700px;
+}
+
 #menu_conn_box { width:50%;max-width: 300px;min-width:180px;z-index: 998;}
 #menu_insc_box { width:50%;max-width: 300px;min-width:180px;z-index: 999;}
 .menu_box span { text-align: right;display: inline-block;padding-right: 5px;}
@@ -177,6 +181,7 @@ button:hover, a.button:hover {
     margin-left:5px;
     text-decoration: underline;
     text-shadow: -1px 0 2px white, 0 1px 2px white, 1px 0 2px white, 0 -1px 2px white;
+    text-shadow: -1px 0 2px #F2F2F2, 0 1px 2px #F2F2F2, 1px 0 2px #F2F2F2, 0 -1px 2px #F2F2F2;
 }
 
 div[id^=block_] {
