--- a/web/css/nico.css
+++ b/web/css/nico.css
@@ -62,9 +62,14 @@ footer {
     vertical-align: middle;
 }
 @media only screen and (max-width : 767px) {
-    #menu_1 {white-space: nowrap;}
     .ban1,.ban2 { white-space:normal;height:50%;}
     .ban2 span {font-size: 150%;}
+    
+    
+    //test
+    //#menu_1 div[id^=menu_] span {width: 100%;display: block;text-align: center;}
+    //#menu_conn_box input {display: block;}
+    //#menu_conn_box {text-align: center;}
 }
 
 footer {
@@ -121,29 +126,23 @@ ul {
 }
 
 .menu_box {
-    display: none;
-    position: absolute;
-    border: 5px solid white;
-    border-radius: 10px;
-    padding: 5px;
-    margin: 5px 0 0 0;
-    
     background-color: #47D147;
     background: -webkit-linear-gradient( -40deg, #009100, #47D147);
     background:    -moz-linear-gradient( -40deg, #009100, #47D147);
     background:     -ms-linear-gradient( -40deg, #009100, #47D147);
     background:      -o-linear-gradient( -40deg, #009100, #47D147);
     background:         linear-gradient( -40deg, #009100, #47D147);
+    border: 5px solid white;
+    border-radius: 10px;
+    display: none;
+    margin: 5px 0 0 0;
+    padding: 5px;
+    position: absolute;
+    text-align: center;
 }
 
-.magasin .menu_box{
-    //max-width: 700px;
-}
-
-#menu_conn_box { max-width: 300px;min-width:180px;z-index: 998;}
-#menu_insc_box { max-width: 300px;min-width:180px;z-index: 999;}
-.menu_box span { text-align: right;display: inline-block;padding-right: 5px;}
-header .menu_box span { width: 81px;}
+#menu_conn_box,#menu_insc_box { max-width: 300px;min-width:180px;z-index: 999;}
+.menu_box span { text-align: right;display: inline-block;padding-right: 5px;width: 81px;}
 
 .menu_box input {
     display:inline;
@@ -172,7 +171,6 @@ button:hover, a.button:hover {
 }
 
 .presentation {
-    text-align: center;
     color:#2e2e2e;
 }
 
