--- a/web/css/nico.css
+++ b/web/css/nico.css
@@ -26,7 +26,6 @@ footer {
 .rotation {  
     display:inline-block;
     color: #ffffff;
-    font-size:25pt;
     font-size:200%;
     font-weight: 900;
     padding: 0 5px 0 0;
@@ -39,7 +38,6 @@ footer {
 }
 
 .ban2 img {
-    //width:120px;
     height:100%;
 }
 
@@ -63,13 +61,8 @@ footer {
 }
 @media only screen and (max-width : 767px) {
     .ban1,.ban2 { white-space:normal;height:50%;}
-    .ban2 span {font-size: 150%;}
-    
-    
-    //test
-    //#menu_1 div[id^=menu_] span {width: 100%;display: block;text-align: center;}
-    //#menu_conn_box input {display: block;}
-    //#menu_conn_box {text-align: center;}
+    .rotation {font-size: 150%;}
+    #menu_1 .row div {margin-right: 0;margin-left: 0;padding-left: 0;padding-right: 0;}
 }
 
 footer {
@@ -134,15 +127,21 @@ ul {
     background:         linear-gradient( -40deg, #009100, #47D147);
     border: 5px solid white;
     border-radius: 10px;
+    font-weight: 600;
     display: none;
-    margin: 5px 0 0 0;
+    margin: 5px 0 5px 0;
     padding: 5px;
     position: absolute;
     text-align: center;
 }
+.menu_box span {
+    color: white;
+    font-weight: 600;
+}
 
 #menu_conn_box,#menu_insc_box { max-width: 300px;min-width:180px;z-index: 999;}
 .menu_box span { text-align: right;display: inline-block;padding-right: 5px;width: 81px;}
+.menu_mag {margin:0 0 10px 0;}
 
 .menu_box input {
     display:inline;
@@ -174,7 +173,7 @@ button:hover, a.button:hover {
     color:#2e2e2e;
 }
 
-.block h3 {
+.block h3, h3 {
     color:#084;
     font-size: 32px;
     font-weight: bold;
