commit pour le majbdd

--- a/web/css/max.css
+++ b/web/css/max.css
@@ -59,3 +59,5 @@
 
 .simplecolorpicker {width: auto !important;}
 .simplecolorpicker .color {width: 20px !important;}
+
+.pagination li>a {color: #0A1;}
