--- a/web/css/max.css
+++ b/web/css/max.css
@@ -4,6 +4,7 @@
 .pa-no-v {padding-top: 0px !important; padding-bottom: 0px !important;}
 .text-left-important {text-align: left !important;}
 .text-center-important {text-align: center !important;}
+.right {float:right;}
 
 #menu_1 input[type=text] {color: #888;}
 
